cql_interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    DOT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> command SEMICOLON
Rule 5     command -> IMPORT TABLE ID FROM STRING
Rule 6     command -> EXPORT TABLE ID TO STRING
Rule 7     command -> DISCARD TABLE ID
Rule 8     command -> RENAME TABLE ID TO ID
Rule 9     command -> PRINT TABLE ID
Rule 10    command -> CREATE TABLE ID FROM query
Rule 11    command -> CALL ID
Rule 12    command -> PROCEDURE ID BEGIN statements END
Rule 13    query -> SELECT field_list FROM ID where_clause limit_clause
Rule 14    query -> SELECT field_list FROM ID JOIN ID ON ID EQ ID where_clause limit_clause
Rule 15    field_list -> ASTERISK
Rule 16    field_list -> ID
Rule 17    field_list -> ID COMMA field_list
Rule 18    where_clause -> <empty>
Rule 19    where_clause -> WHERE condition
Rule 20    condition -> ID EQUALS STRING
Rule 21    condition -> ID EQ STRING
Rule 22    condition -> ID GT STRING
Rule 23    condition -> ID LT STRING
Rule 24    condition -> ID GE STRING
Rule 25    condition -> ID LE STRING
Rule 26    condition -> ID NE STRING
Rule 27    limit_clause -> <empty>
Rule 28    limit_clause -> LIMIT NUMBER

Terminals, with rules where they appear

AS                   : 
ASTERISK             : 15
BEGIN                : 12
CALL                 : 11
COMMA                : 17
CREATE               : 10
DISCARD              : 7
DOT                  : 
END                  : 12
EQ                   : 14 21
EQUALS               : 20
EXPORT               : 6
FROM                 : 5 10 13 14
GE                   : 24
GT                   : 22
ID                   : 5 6 7 8 8 9 10 11 12 13 14 14 14 14 16 17 20 21 22 23 24 25 26
IMPORT               : 5
JOIN                 : 14
LE                   : 25
LIMIT                : 28
LT                   : 23
NE                   : 26
NUMBER               : 28
ON                   : 14
PRINT                : 9
PROCEDURE            : 12
RENAME               : 8
SELECT               : 13 14
SEMICOLON            : 4
STRING               : 5 6 20 21 22 23 24 25 26
TABLE                : 5 6 7 8 9 10
TO                   : 6 8
WHERE                : 19
error                : 

Nonterminals, with rules where they appear

command              : 4
condition            : 19
field_list           : 13 14 17
limit_clause         : 13 14
program              : 0
query                : 10
statement            : 2 3
statements           : 1 2 12
where_clause         : 13 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . command SEMICOLON
    (5) command -> . IMPORT TABLE ID FROM STRING
    (6) command -> . EXPORT TABLE ID TO STRING
    (7) command -> . DISCARD TABLE ID
    (8) command -> . RENAME TABLE ID TO ID
    (9) command -> . PRINT TABLE ID
    (10) command -> . CREATE TABLE ID FROM query
    (11) command -> . CALL ID
    (12) command -> . PROCEDURE ID BEGIN statements END

    IMPORT          shift and go to state 5
    EXPORT          shift and go to state 6
    DISCARD         shift and go to state 7
    RENAME          shift and go to state 8
    PRINT           shift and go to state 9
    CREATE          shift and go to state 10
    CALL            shift and go to state 11
    PROCEDURE       shift and go to state 12

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    command                        shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . command SEMICOLON
    (5) command -> . IMPORT TABLE ID FROM STRING
    (6) command -> . EXPORT TABLE ID TO STRING
    (7) command -> . DISCARD TABLE ID
    (8) command -> . RENAME TABLE ID TO ID
    (9) command -> . PRINT TABLE ID
    (10) command -> . CREATE TABLE ID FROM query
    (11) command -> . CALL ID
    (12) command -> . PROCEDURE ID BEGIN statements END

    $end            reduce using rule 1 (program -> statements .)
    IMPORT          shift and go to state 5
    EXPORT          shift and go to state 6
    DISCARD         shift and go to state 7
    RENAME          shift and go to state 8
    PRINT           shift and go to state 9
    CREATE          shift and go to state 10
    CALL            shift and go to state 11
    PROCEDURE       shift and go to state 12

    statement                      shift and go to state 13
    command                        shift and go to state 4

state 3

    (3) statements -> statement .

    IMPORT          reduce using rule 3 (statements -> statement .)
    EXPORT          reduce using rule 3 (statements -> statement .)
    DISCARD         reduce using rule 3 (statements -> statement .)
    RENAME          reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    CREATE          reduce using rule 3 (statements -> statement .)
    CALL            reduce using rule 3 (statements -> statement .)
    PROCEDURE       reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    END             reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> command . SEMICOLON

    SEMICOLON       shift and go to state 14


state 5

    (5) command -> IMPORT . TABLE ID FROM STRING

    TABLE           shift and go to state 15


state 6

    (6) command -> EXPORT . TABLE ID TO STRING

    TABLE           shift and go to state 16


state 7

    (7) command -> DISCARD . TABLE ID

    TABLE           shift and go to state 17


state 8

    (8) command -> RENAME . TABLE ID TO ID

    TABLE           shift and go to state 18


state 9

    (9) command -> PRINT . TABLE ID

    TABLE           shift and go to state 19


state 10

    (10) command -> CREATE . TABLE ID FROM query

    TABLE           shift and go to state 20


state 11

    (11) command -> CALL . ID

    ID              shift and go to state 21


state 12

    (12) command -> PROCEDURE . ID BEGIN statements END

    ID              shift and go to state 22


state 13

    (2) statements -> statements statement .

    IMPORT          reduce using rule 2 (statements -> statements statement .)
    EXPORT          reduce using rule 2 (statements -> statements statement .)
    DISCARD         reduce using rule 2 (statements -> statements statement .)
    RENAME          reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    CREATE          reduce using rule 2 (statements -> statements statement .)
    CALL            reduce using rule 2 (statements -> statements statement .)
    PROCEDURE       reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    END             reduce using rule 2 (statements -> statements statement .)


state 14

    (4) statement -> command SEMICOLON .

    IMPORT          reduce using rule 4 (statement -> command SEMICOLON .)
    EXPORT          reduce using rule 4 (statement -> command SEMICOLON .)
    DISCARD         reduce using rule 4 (statement -> command SEMICOLON .)
    RENAME          reduce using rule 4 (statement -> command SEMICOLON .)
    PRINT           reduce using rule 4 (statement -> command SEMICOLON .)
    CREATE          reduce using rule 4 (statement -> command SEMICOLON .)
    CALL            reduce using rule 4 (statement -> command SEMICOLON .)
    PROCEDURE       reduce using rule 4 (statement -> command SEMICOLON .)
    $end            reduce using rule 4 (statement -> command SEMICOLON .)
    END             reduce using rule 4 (statement -> command SEMICOLON .)


state 15

    (5) command -> IMPORT TABLE . ID FROM STRING

    ID              shift and go to state 23


state 16

    (6) command -> EXPORT TABLE . ID TO STRING

    ID              shift and go to state 24


state 17

    (7) command -> DISCARD TABLE . ID

    ID              shift and go to state 25


state 18

    (8) command -> RENAME TABLE . ID TO ID

    ID              shift and go to state 26


state 19

    (9) command -> PRINT TABLE . ID

    ID              shift and go to state 27


state 20

    (10) command -> CREATE TABLE . ID FROM query

    ID              shift and go to state 28


state 21

    (11) command -> CALL ID .

    SEMICOLON       reduce using rule 11 (command -> CALL ID .)


state 22

    (12) command -> PROCEDURE ID . BEGIN statements END

    BEGIN           shift and go to state 29


state 23

    (5) command -> IMPORT TABLE ID . FROM STRING

    FROM            shift and go to state 30


state 24

    (6) command -> EXPORT TABLE ID . TO STRING

    TO              shift and go to state 31


state 25

    (7) command -> DISCARD TABLE ID .

    SEMICOLON       reduce using rule 7 (command -> DISCARD TABLE ID .)


state 26

    (8) command -> RENAME TABLE ID . TO ID

    TO              shift and go to state 32


state 27

    (9) command -> PRINT TABLE ID .

    SEMICOLON       reduce using rule 9 (command -> PRINT TABLE ID .)


state 28

    (10) command -> CREATE TABLE ID . FROM query

    FROM            shift and go to state 33


state 29

    (12) command -> PROCEDURE ID BEGIN . statements END
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . command SEMICOLON
    (5) command -> . IMPORT TABLE ID FROM STRING
    (6) command -> . EXPORT TABLE ID TO STRING
    (7) command -> . DISCARD TABLE ID
    (8) command -> . RENAME TABLE ID TO ID
    (9) command -> . PRINT TABLE ID
    (10) command -> . CREATE TABLE ID FROM query
    (11) command -> . CALL ID
    (12) command -> . PROCEDURE ID BEGIN statements END

    IMPORT          shift and go to state 5
    EXPORT          shift and go to state 6
    DISCARD         shift and go to state 7
    RENAME          shift and go to state 8
    PRINT           shift and go to state 9
    CREATE          shift and go to state 10
    CALL            shift and go to state 11
    PROCEDURE       shift and go to state 12

    statements                     shift and go to state 34
    statement                      shift and go to state 3
    command                        shift and go to state 4

state 30

    (5) command -> IMPORT TABLE ID FROM . STRING

    STRING          shift and go to state 35


state 31

    (6) command -> EXPORT TABLE ID TO . STRING

    STRING          shift and go to state 36


state 32

    (8) command -> RENAME TABLE ID TO . ID

    ID              shift and go to state 37


state 33

    (10) command -> CREATE TABLE ID FROM . query
    (13) query -> . SELECT field_list FROM ID where_clause limit_clause
    (14) query -> . SELECT field_list FROM ID JOIN ID ON ID EQ ID where_clause limit_clause

    SELECT          shift and go to state 39

    query                          shift and go to state 38

state 34

    (12) command -> PROCEDURE ID BEGIN statements . END
    (2) statements -> statements . statement
    (4) statement -> . command SEMICOLON
    (5) command -> . IMPORT TABLE ID FROM STRING
    (6) command -> . EXPORT TABLE ID TO STRING
    (7) command -> . DISCARD TABLE ID
    (8) command -> . RENAME TABLE ID TO ID
    (9) command -> . PRINT TABLE ID
    (10) command -> . CREATE TABLE ID FROM query
    (11) command -> . CALL ID
    (12) command -> . PROCEDURE ID BEGIN statements END

    END             shift and go to state 40
    IMPORT          shift and go to state 5
    EXPORT          shift and go to state 6
    DISCARD         shift and go to state 7
    RENAME          shift and go to state 8
    PRINT           shift and go to state 9
    CREATE          shift and go to state 10
    CALL            shift and go to state 11
    PROCEDURE       shift and go to state 12

    statement                      shift and go to state 13
    command                        shift and go to state 4

state 35

    (5) command -> IMPORT TABLE ID FROM STRING .

    SEMICOLON       reduce using rule 5 (command -> IMPORT TABLE ID FROM STRING .)


state 36

    (6) command -> EXPORT TABLE ID TO STRING .

    SEMICOLON       reduce using rule 6 (command -> EXPORT TABLE ID TO STRING .)


state 37

    (8) command -> RENAME TABLE ID TO ID .

    SEMICOLON       reduce using rule 8 (command -> RENAME TABLE ID TO ID .)


state 38

    (10) command -> CREATE TABLE ID FROM query .

    SEMICOLON       reduce using rule 10 (command -> CREATE TABLE ID FROM query .)


state 39

    (13) query -> SELECT . field_list FROM ID where_clause limit_clause
    (14) query -> SELECT . field_list FROM ID JOIN ID ON ID EQ ID where_clause limit_clause
    (15) field_list -> . ASTERISK
    (16) field_list -> . ID
    (17) field_list -> . ID COMMA field_list

    ASTERISK        shift and go to state 43
    ID              shift and go to state 42

    field_list                     shift and go to state 41

state 40

    (12) command -> PROCEDURE ID BEGIN statements END .

    SEMICOLON       reduce using rule 12 (command -> PROCEDURE ID BEGIN statements END .)


state 41

    (13) query -> SELECT field_list . FROM ID where_clause limit_clause
    (14) query -> SELECT field_list . FROM ID JOIN ID ON ID EQ ID where_clause limit_clause

    FROM            shift and go to state 44


state 42

    (16) field_list -> ID .
    (17) field_list -> ID . COMMA field_list

    FROM            reduce using rule 16 (field_list -> ID .)
    COMMA           shift and go to state 45


state 43

    (15) field_list -> ASTERISK .

    FROM            reduce using rule 15 (field_list -> ASTERISK .)


state 44

    (13) query -> SELECT field_list FROM . ID where_clause limit_clause
    (14) query -> SELECT field_list FROM . ID JOIN ID ON ID EQ ID where_clause limit_clause

    ID              shift and go to state 46


state 45

    (17) field_list -> ID COMMA . field_list
    (15) field_list -> . ASTERISK
    (16) field_list -> . ID
    (17) field_list -> . ID COMMA field_list

    ASTERISK        shift and go to state 43
    ID              shift and go to state 42

    field_list                     shift and go to state 47

state 46

    (13) query -> SELECT field_list FROM ID . where_clause limit_clause
    (14) query -> SELECT field_list FROM ID . JOIN ID ON ID EQ ID where_clause limit_clause
    (18) where_clause -> .
    (19) where_clause -> . WHERE condition

    JOIN            shift and go to state 49
    LIMIT           reduce using rule 18 (where_clause -> .)
    SEMICOLON       reduce using rule 18 (where_clause -> .)
    WHERE           shift and go to state 50

    where_clause                   shift and go to state 48

state 47

    (17) field_list -> ID COMMA field_list .

    FROM            reduce using rule 17 (field_list -> ID COMMA field_list .)


state 48

    (13) query -> SELECT field_list FROM ID where_clause . limit_clause
    (27) limit_clause -> .
    (28) limit_clause -> . LIMIT NUMBER

    SEMICOLON       reduce using rule 27 (limit_clause -> .)
    LIMIT           shift and go to state 52

    limit_clause                   shift and go to state 51

state 49

    (14) query -> SELECT field_list FROM ID JOIN . ID ON ID EQ ID where_clause limit_clause

    ID              shift and go to state 53


state 50

    (19) where_clause -> WHERE . condition
    (20) condition -> . ID EQUALS STRING
    (21) condition -> . ID EQ STRING
    (22) condition -> . ID GT STRING
    (23) condition -> . ID LT STRING
    (24) condition -> . ID GE STRING
    (25) condition -> . ID LE STRING
    (26) condition -> . ID NE STRING

    ID              shift and go to state 55

    condition                      shift and go to state 54

state 51

    (13) query -> SELECT field_list FROM ID where_clause limit_clause .

    SEMICOLON       reduce using rule 13 (query -> SELECT field_list FROM ID where_clause limit_clause .)


state 52

    (28) limit_clause -> LIMIT . NUMBER

    NUMBER          shift and go to state 56


state 53

    (14) query -> SELECT field_list FROM ID JOIN ID . ON ID EQ ID where_clause limit_clause

    ON              shift and go to state 57


state 54

    (19) where_clause -> WHERE condition .

    LIMIT           reduce using rule 19 (where_clause -> WHERE condition .)
    SEMICOLON       reduce using rule 19 (where_clause -> WHERE condition .)


state 55

    (20) condition -> ID . EQUALS STRING
    (21) condition -> ID . EQ STRING
    (22) condition -> ID . GT STRING
    (23) condition -> ID . LT STRING
    (24) condition -> ID . GE STRING
    (25) condition -> ID . LE STRING
    (26) condition -> ID . NE STRING

    EQUALS          shift and go to state 58
    EQ              shift and go to state 59
    GT              shift and go to state 60
    LT              shift and go to state 61
    GE              shift and go to state 62
    LE              shift and go to state 63
    NE              shift and go to state 64


state 56

    (28) limit_clause -> LIMIT NUMBER .

    SEMICOLON       reduce using rule 28 (limit_clause -> LIMIT NUMBER .)


state 57

    (14) query -> SELECT field_list FROM ID JOIN ID ON . ID EQ ID where_clause limit_clause

    ID              shift and go to state 65


state 58

    (20) condition -> ID EQUALS . STRING

    STRING          shift and go to state 66


state 59

    (21) condition -> ID EQ . STRING

    STRING          shift and go to state 67


state 60

    (22) condition -> ID GT . STRING

    STRING          shift and go to state 68


state 61

    (23) condition -> ID LT . STRING

    STRING          shift and go to state 69


state 62

    (24) condition -> ID GE . STRING

    STRING          shift and go to state 70


state 63

    (25) condition -> ID LE . STRING

    STRING          shift and go to state 71


state 64

    (26) condition -> ID NE . STRING

    STRING          shift and go to state 72


state 65

    (14) query -> SELECT field_list FROM ID JOIN ID ON ID . EQ ID where_clause limit_clause

    EQ              shift and go to state 73


state 66

    (20) condition -> ID EQUALS STRING .

    LIMIT           reduce using rule 20 (condition -> ID EQUALS STRING .)
    SEMICOLON       reduce using rule 20 (condition -> ID EQUALS STRING .)


state 67

    (21) condition -> ID EQ STRING .

    LIMIT           reduce using rule 21 (condition -> ID EQ STRING .)
    SEMICOLON       reduce using rule 21 (condition -> ID EQ STRING .)


state 68

    (22) condition -> ID GT STRING .

    LIMIT           reduce using rule 22 (condition -> ID GT STRING .)
    SEMICOLON       reduce using rule 22 (condition -> ID GT STRING .)


state 69

    (23) condition -> ID LT STRING .

    LIMIT           reduce using rule 23 (condition -> ID LT STRING .)
    SEMICOLON       reduce using rule 23 (condition -> ID LT STRING .)


state 70

    (24) condition -> ID GE STRING .

    LIMIT           reduce using rule 24 (condition -> ID GE STRING .)
    SEMICOLON       reduce using rule 24 (condition -> ID GE STRING .)


state 71

    (25) condition -> ID LE STRING .

    LIMIT           reduce using rule 25 (condition -> ID LE STRING .)
    SEMICOLON       reduce using rule 25 (condition -> ID LE STRING .)


state 72

    (26) condition -> ID NE STRING .

    LIMIT           reduce using rule 26 (condition -> ID NE STRING .)
    SEMICOLON       reduce using rule 26 (condition -> ID NE STRING .)


state 73

    (14) query -> SELECT field_list FROM ID JOIN ID ON ID EQ . ID where_clause limit_clause

    ID              shift and go to state 74


state 74

    (14) query -> SELECT field_list FROM ID JOIN ID ON ID EQ ID . where_clause limit_clause
    (18) where_clause -> .
    (19) where_clause -> . WHERE condition

    LIMIT           reduce using rule 18 (where_clause -> .)
    SEMICOLON       reduce using rule 18 (where_clause -> .)
    WHERE           shift and go to state 50

    where_clause                   shift and go to state 75

state 75

    (14) query -> SELECT field_list FROM ID JOIN ID ON ID EQ ID where_clause . limit_clause
    (27) limit_clause -> .
    (28) limit_clause -> . LIMIT NUMBER

    SEMICOLON       reduce using rule 27 (limit_clause -> .)
    LIMIT           shift and go to state 52

    limit_clause                   shift and go to state 76

state 76

    (14) query -> SELECT field_list FROM ID JOIN ID ON ID EQ ID where_clause limit_clause .

    SEMICOLON       reduce using rule 14 (query -> SELECT field_list FROM ID JOIN ID ON ID EQ ID where_clause limit_clause .)

